# GIS

FloodRiskNFHL/: FEMA Flood.ipynb  pyproject.toml  utils.py
FloodRiskNFHL/results/: assets_with_flood_info.gpkg
FloodRiskNFHL/results/esri_shapefile/: assets_with_flood_info.dbf  assets_with_flood_info.shp  assets_with_flood_info.shx
